2A/05_Projet_GL/src/test/deca/syntax/invalid/Objet/39_MethodPublic.deca
// Description:
//    Programme definition d'une class de visibilité public et en écrivant le mots clé public
// Resultats:
//      Programme incorrecte syntaxiquement :9:22: mismatched input '(' expecting {'=', ';', ','}
// Historique:
//    cree le 18/01/2023
class A {
    protected int x;
    public int getX()
    {
        return x;
    }
}